Make login page responsive and fix Anc images dimensions getting stretched beyond proportions

--- a/bos/src/client/assets/scss/login.scss
+++ b/bos/src/client/assets/scss/login.scss
@@ -61,14 +61,11 @@ img#AnnouncementIcon {
   background: rgba(255, 255, 255, 0.8);
   flex-flow: column;
   flex-grow: 3;
-}
-
-#ox-login-form {
   padding: 40px 30px;
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
-  width: 300px;
+  min-width: 300px;
   h4 {
     margin-bottom: 20px;
     color: rgba(#000, 0.5);
@@ -103,6 +100,7 @@ img#AnnouncementIcon {
 button {
   -webkit-appearance:  none; 
   width: 100%;
+  max-width: 250px;
   cursor:pointer;
   min-width:  100px;
   border-radius:  .25em; 
@@ -113,7 +111,6 @@ button {
   background-color: #275362; 
   color:  #fff; 
   font-size:  14px;
-  margin-left:  auto; 
   font-weight:  500; 
   box-shadow:  0px 2px 6px -1px rgba(0,0,0,.13); 
   border:  none;
@@ -204,10 +201,11 @@ $displacement: 3px;
 }
 .form-wrapper__inner {
   align-items: center;
-  padding: 65px;
+  padding: 10%;
 }
 .loginSlider{
     padding: 0 !important;
+    height: inherit
 }
 .form-signin__footer {
   justify-content: space-between;
@@ -220,10 +218,12 @@ $displacement: 3px;
   width: 100%;
 }
 .footer-links {
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 25px;
-  text-align: center;
+   margin-bottom: 25px;
+   text-align: center;
+   position: absolute;
+   left:0px;
+   bottom:0px;
+   width:100%;
 }
 
 .ox-form {
@@ -283,15 +283,14 @@ $displacement: 3px;
   //border-radius: 2px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   #ox-login-form {
-    width: 100%;
     text-align: center;
     position: relative;
     margin: 0px;
     overflow: auto;
     flex: 0 0 100%;
-    max-width: 100%;
+    max-width: 500px;
   }
   .form-wrapper__inner {
     padding: 30px;
@@ -300,12 +299,15 @@ $displacement: 3px;
     margin-bottom: 30px;
   }
   .loginSlider{
-    width: 100% !important;
-    flex: 0 0 100% !important;
-    max-width: 100% !important;
+    display: none!important;
+    // width: 100% !important;
+    // flex: 0 0 100% !important;
+    // max-width: 100% !important;
   }
   .loginContainer{
-    flex-wrap: wrap-reverse !important;
+    // flex-wrap: wrap-reverse !important;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -374,6 +376,12 @@ margin:15px;
   flex-direction: column;
 }
 .Announcement-visuals {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+
     background-color: #edf3f2;
     text-align: center;
     display: flex;
@@ -398,7 +406,7 @@ margin:15px;
   .Announcement-visuals {
     img {
       width: auto;
-      height: 100%;
+      height: auto;
       max-width: 100%;
     }
   }
